--- a/PHP/static/css/dashboard.css
+++ b/PHP/static/css/dashboard.css
@@ -36,3 +36,8 @@ body {
             justify-content: center;
 
         }
+
+        #photo-container{
+            display: flex;
+            flex-wrap: wrap;
+        }
