--- a/PHP/static/css/dashboard.css
+++ b/PHP/static/css/dashboard.css
@@ -1,43 +1,108 @@
 body {
-            font-family: "Courier New", Courier, monospace;
-            background-color: #1D63ED; 
-                display: flex;
-                justify-content: center;
-                height: 100vh;
-        }
-        .container {
-            width: 95%;
-            background-color: rgba(255, 255, 255, 0.661);
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-        }
+    font-family: "Courier New", Courier, monospace;
+    background-color: #1D63ED; 
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+}
+.container {
+    width: 95%;
+    background-color: rgba(255, 255, 255, 0.661);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+h1 {
+    color: #333;
+}
 
-        #logout {
-            display: flex;
-            justify-content: right;
-            width: 95%;
-        }
+#logout {
+    display: flex;
+    justify-content: right;
+    width: 95%;
+}
 
-        #logoutButton {
-            padding: 15%; 
-            background-color: #5cb85c; 
-            border: none; 
-            border-radius: 4px; 
-            color: white; 
-            font-size: 16px; cursor: pointer;
-        }
+#logoutButton {
+    padding: 15%; 
+    background-color: #5cb85c; 
+    border: none; 
+    border-radius: 4px; 
+    color: white; 
+    font-size: 16px; cursor: pointer;
+}
 
-        #title {
-            display: flex;
-            justify-content: center;
+#title {
+    display: flex;
+    justify-content: center;
 
-        }
+}
 
-        #photo-container{
-            display: flex;
-            flex-wrap: wrap;
-        }
+#photo-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.main-header {
+position: fixed;
+top: 0;
+left: 0;
+margin: 0;
+width: 100%;
+height: 60px;
+background-color: #ffffffbe;
+box-sizing: border-box;
+display: flex;
+justify-content: space-between; 
+align-items: center;
+padding: 0 20px 0px;
+box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+z-index: 10000; 
+}
+
+.logout-btn {
+background-color: #f44336; 
+color: white;
+border: none;
+padding: 8px 16px;
+border-radius: 4px;
+cursor: pointer;
+font-weight: bold;
+transition: background 0.2s;
+}
+
+.logout-btn:hover {
+background-color: #d32f2f;
+}
+
+
+body {
+padding-top: 80px; 
+}
+
+.floating-plus-btn {
+
+position: fixed;   
+bottom: 25px;      
+right: 25px;     
+z-index: 9999;    
+
+
+width: 60px;
+height: 60px;
+background-color: #007bff;
+color: white;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 30px;
+cursor: pointer;
+box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+transition: transform 0.2s, background-color 0.2s;
+}
+
+
+.floating-plus-btn:hover {
+background-color: #0056b3;
+transform: scale(1.1); 
+}
