--- a/PHP/static/css/dashboard.css
+++ b/PHP/static/css/dashboard.css
@@ -84,8 +84,8 @@ padding-top: 80px;
 .floating-plus-btn {
 
 position: fixed;   
-bottom: 25px;      
-right: 25px;     
+bottom: 5%;      
+right: 3%;     
 z-index: 9999;    
 
 
