--- a/PHP/static/css/dashboard.css
+++ b/PHP/static/css/dashboard.css
@@ -39,7 +39,6 @@ h1 {
 #photo-container{
     display: flex;
     flex-wrap: wrap;
-    row-gap: 10%;
     column-gap: 1%;
     justify-content: center;
 }
@@ -140,3 +139,58 @@ transform: scale(1.1);
 .status-msg.fade {
     opacity: 0;
 }
+
+
+
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8); /* Dark fallback */
+    backdrop-filter: blur(8px); /* Modern blur effect */
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 100000; /* On top of other elements */
+}
+
+/* Modal Content (The Image) */
+.modal-content {
+    max-width: 90%;
+    max-height: 80%;
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    animation: zoomIn 0.3s ease; /* Smooth entrance */
+}
+
+/* Caption Text */
+#caption {
+    margin-top: 15px;
+    color: #ccc;
+    font-size: 1.2rem;
+}
+
+/* Close Button */
+.close-viewer {
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+@keyframes zoomIn {
+    from {transform: scale(0.7); opacity: 0;}
+    to {transform: scale(1); opacity: 1;}
+}
+
+
+
