--- a/PHP/static/css/dashboard.css
+++ b/PHP/static/css/dashboard.css
@@ -145,6 +145,33 @@ box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 transition: transform 0.2s, background-color 0.2s;
 }
 
+.floating-sync {
+
+position: fixed;   
+bottom: 13%;      
+right: 3%;     
+z-index: 9999;    
+
+
+width: 60px;
+height: 60px;
+background-color: #009700;
+color: white;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 20px;
+cursor: pointer;
+box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+transition: transform 0.2s, background-color 0.2s;
+}
+
+.floating-sync:hover {
+background-color: #006600;
+transform: scale(1.1); 
+}
+
 
 .floating-plus-btn:hover {
 background-color: #0056b3;
