--- a/PHP/static/css/dashboard.css
+++ b/PHP/static/css/dashboard.css
@@ -294,3 +294,16 @@ transform: scale(1.1);
 }
 
 
+@media screen and (max-height: 750px) and (min-height: 650px) {
+  
+    .floating-sync {
+        bottom: 15%;
+    }
+}
+
+@media screen and (max-height: 650px) {
+  
+    .floating-sync {
+        bottom: 17%;
+    }
+}
