--- a/PHP/static/css/login.css
+++ b/PHP/static/css/login.css
@@ -18,3 +18,9 @@
         button:hover { background-color: #4cae4c; }
         html { font-family: "Courier New", Courier, monospace;}
         #registerButton { background-color: #0275d8; margin-top: 2%;}
+
+@media only screen and (max-width: 680px) {
+        h2 {
+                font-size: medium;
+        }
+}
