--- a/PHP/static/css/dashboard.css
+++ b/PHP/static/css/dashboard.css
@@ -425,3 +425,7 @@ transform: scale(1.1);
 }
 
 
+.image-container {
+  position: relative; /* Sets the reference point for the checkbox */
+  display: inline-block; /* Keeps the container the same size as the image */
+}
