--- a/PHP/static/css/login.css
+++ b/PHP/static/css/login.css
@@ -1,23 +1,27 @@
 /* Basic inline styles for a quick template */
-        body { background-color: #1D63ED; 
+        body { background-color: #0b141a; 
                 display: flex; flex-direction: 
                 column; justify-content: center; 
                 align-items: center; 
                 height: 100vh; margin: 0; }
 
-        .login-container { background: #E5F2FC; 
-                padding: 20px 30px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 25%;margin-bottom: 5%;}
-        h2 { text-align: center; color: #333; }
+        .login-container { background: #bb00ff7e; 
+                padding: 20px 30px; border-radius: 5px; border: 1px solid rgba(0, 242, 255, 0.2); width: 50%; margin-bottom: 5%;}
 
+        
         .form-group { margin-bottom: 15px; }
 
-        label { display: block; margin-bottom: 5px; font-weight: bold; color: #555; }
+        label { display: block; margin-bottom: 5px; font-weight: bold; color: #e7e7e7; }
 
         input[type="text"], input[type="password"] { width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
-        button { width: 100%; padding: 10px; background-color: #5cb85c; border: none; border-radius: 4px; color: white; font-size: 16px; cursor: pointer; }
-        button:hover { background-color: #4cae4c; }
+
+        button { width: 100%; padding: 10px; background-color: #00f2ff; border: none; border-radius: 4px; color: white; font-size: 16px; cursor: pointer; }
+
+        button:hover { background-color: #007c85; }
+
         html { font-family: "Courier New", Courier, monospace;}
-        #registerButton { background-color: #0275d8; margin-top: 2%;}
+        
+        #registerButton { background-color: #39ff14; margin-top: 2%;}
 
 @media only screen and (max-width: 680px) {
         h2 {
